stream optimization in get-methods; tests for CharacterService; readme